yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-svc
  name: api-python
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: api-pod
